--- a/HTML - Personal Site/contact-me.html
+++ b/HTML - Personal Site/contact-me.html
@@ -8,8 +8,22 @@
 </head>
 <body>
     <h1>My Contact Details</h1>
-    <p>My Fictional Address</p>
-    <p>07711 157264</p>
+    <p>Stroud/Bristol, UK</p>
+    <p>+44 (0)7711 157264</p>
     <p>richalee@pm.me</p>
+    <hr>
+
+    <form action="imailto:richalee@pm.me" method="post" enctype="text/plain">
+        <label for="">Your Name:</label>
+        <input type="text" name="yourName" value=""><br>
+
+        <label for="">Your Email:</label>
+        <input type="email" name="yourEmail" value=""><br>
+        
+        <label for="">Your Message:</label><br>
+        <textarea name="yourMessage" id="" cols="30" rows="10"></textarea><br>  
+
+        <input type="submit" name="">
+    </form>
 </body>
 </html>
