--- a/HTML - Personal Site/index.html
+++ b/HTML - Personal Site/index.html
@@ -7,16 +7,75 @@
     <title>Rich's Personal Site</title>
 </head>
 <body>
-    <img src="images/ape_rich.jpg" alt="rich profile picture">
-    <h1>Rich Lee</h1>
-    <p>Founder and CTO of <strong><a href="https:www.bjss.com">nothing in particular</a></strong></strong></p>
-    <p>I am a dot net C# developer. I 💚 coffee</p>
-    <hr size="3">
+    <table cellspacing="20">
+        <tr>
+            <td>
+                <img src="images/ape_rich.jpg" alt="rich profile picture">
+            </td>
+            <td>
+                <h1>Rich Lee</h1>
+                <p>Founder and CTO of <strong><a href="https:www.bjss.com">nothing in particular</a></strong></strong></p>
+                <p>I am a dot net C# developer. I 💚 coffee</p>
+            </td>
+        </tr>
+    </table>
+    
+    <hr>
     <h3>Books and Study</h3>
     <ul>
         <li>The complete iOS App Development Bootcamp</li>
         <li>The complete Wes Development Bootcamp</li>
     </ul>
+
+    <hr>
+    <br>
+    <h3>Work Experience</h3>
+    <table>
+        <thead>
+            <tr>
+                <th>Dates</th>
+                <th>Work</th>
+            </tr>
+            </thead>
+        <tbody>
+            <tr>
+                <td>2010-2013</td>
+                <td>Lead developer at BJSS</td>
+            </tr>
+            <tr>
+                <td>2012</td>
+                <td>Researcher at Uni of Bristol Cog Sci</td>
+            </tr>
+        </tbody>
+        <tfoot>
+
+        </tfoot>
+    </table>
+
+    <hr>
+    <h3>Skills</h3>
+    <table cellspacing="10">
+        <thead>
+
+        </thead>
+        <tbody>
+            <tr>
+                <td>iOS Development</td>
+                <td>⭐️⭐️⭐️⭐️</td>
+                <td>Photography</td>
+                <td>⭐️⭐️⭐️</td>
+            </tr>
+            <tr>
+                <td>C# Development</td><td>⭐️⭐️⭐️⭐️⭐️</td>
+                <td>Baking</td><td>⭐️⭐️</td>
+            </tr>
+        </tbody>
+        <tfoot>
+
+        </tfoot>
+    </table>
+
+    <hr>
     <a href="hobbies.html">My Hobbies</a>
     <br>
     <a href="contact-me.html">My Contact Details</a>
