--- a/CSS - My Site/index.html
+++ b/CSS - My Site/index.html
@@ -4,17 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Contact Me</title>
+    <title>RIch Lee</title>
 
-    <link rel="stylesheet" href="css/styles.css">
-
+    <link rel="stylesheet" href="css/styles.css" type="text/css">
+    <link rel="icon" href="favicon.ico">
 </head>
 <body>
-    <h1>My Hobbies</h1>
-    <ul>
-        <li>beer brewing</li>
-        <li>navel gazing</li>
-        <li>motorcycles</li>
-    </ul>
+    
 </body>
 </html>
