--- a/HTML - Personal Site/index.html
+++ b/HTML - Personal Site/index.html
@@ -5,12 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Rich's Personal Site</title>
+
+    <link rel="stylesheet" href="css/styles.css">
+
 </head>
 <body>
     <table cellspacing="20">
         <tr>
             <td>
-                <img src="images/ape_rich.jpg" alt="rich profile picture">
+                <img class="circular" src="images/ape_rich.jpg" alt="rich profile picture">
             </td>
             <td>
                 <h1>Rich Lee</h1>
